<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Roughing" Id="{62b94bb5-65e0-4b55-be4f-756e1c554b09}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
(******************************************************************************************************)
(*VRC VALVES*) 
(******************************************************************************************************)	
	//Pneumatic valves
	{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[K4S8_DRL_04_E9_EL1004]^Channel 1^Input;
								 .i_xClsLS	:=	TIIB[K4S8_DRL_04_E9_EL1004]^Channel 2^Input;
								 .q_xOPN_DO	:=	TIIB[K4S8_DRL_04_E11_EL2004]^Channel 1^Output
	'}
	{attribute 'pytmc' :=' pv: DREAM:ROUGH1:VRC:01'}
	DREAM_ROUGH1_VRC_01: FB_VRC;

	{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[K4S8_DRL_04_E9_EL1004]^Channel 3^Input;
								 .i_xClsLS	:=	TIIB[K4S8_DRL_04_E9_EL1004]^Channel 4^Input;
								 .q_xOPN_DO	:=	TIIB[K4S8_DRL_04_E11_EL2004]^Channel 2^Output
	'}
	{attribute 'pytmc' :=' pv: DREAM:ROUGH2:VRC:01'}
	DREAM_ROUGH2_VRC_01: FB_VRC;

	{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIIB[K4S8_DRL_04_E10_EL1004]^Channel 1^Input;
								 .i_xClsLS	:=	TIIB[K4S8_DRL_04_E10_EL1004]^Channel 2^Input;
								 .q_xOPN_DO	:=	TIIB[K4S8_DRL_04_E11_EL2004]^Channel 3^Output
	'}
	{attribute 'pytmc' :=' pv: DREAM:ROUGH2:VRC:02'}
	DREAM_ROUGH2_VRC_02: FB_VRC;

(******************************************************************************************************)
(*Flow Control Valves*) 
(******************************************************************************************************)
	//FLow Control valves MKS248
	{attribute 'TcLinkTo' := 	'.q_iRawPosition	:=	TIIB[WALL_E_PPL_01_EP1_EP4374-0002]^AO Outputs Channel 3^Analog output'}
	{attribute 'pytmc' := 'pv: DREAM:ROUGH1:VFV:01'}	
	DREAM_ROUGH1_VFV_01 : FB_MKS248;
	
	{attribute 'TcLinkTo' := 	'.q_iRawPosition	:=	TIIB[K4S8_DRL_04_EP1_EP4374-0002]^AO Outputs Channel 3^Analog output'}
	{attribute 'pytmc' := 'pv: DREAM:ROUGH1:VFV:02'}	
	DREAM_ROUGH1_VFV_02 : FB_MKS248;

	{attribute 'TcLinkTo' := 	'.q_iRawPosition	:=	TIIB[WALL_E_PPL_01_EP1_EP4374-0002]^AO Outputs Channel 4^Analog output'}
	{attribute 'pytmc' := 'pv: DREAM:ROUGH2:VFV:01'}	
	DREAM_ROUGH2_VFV_01 : FB_MKS248;

	{attribute 'TcLinkTo' := 	'.q_iRawPosition	:=	TIIB[K4S8_DRL_04_EP1_EP4374-0002]^AO Outputs Channel 4^Analog output'}
	{attribute 'pytmc' := 'pv: DREAM:ROUGH2:VFV:02'}	
	DREAM_ROUGH2_VFV_02 : FB_MKS248;
	 
	{attribute 'TcLinkTo' := 	'.q_iRawPosition	:=	TIIB[K4S8_DRL_04_EP2_EP4374-0002]^AO Outputs Channel 3^Analog output'}
	{attribute 'pytmc' := 'pv: DREAM:ROUGH2:VFV:03'}	
    DREAM_ROUGH2_VFV_03 : FB_MKS248;

	
(******************************************************************************************************)
(*PIRANIS*) 
(******************************************************************************************************)
	//Micro piranis 925
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[WALL_E_PPL_01_EP1_EP4374-0002]^AI Inputs Channel 1^Value'}
	{attribute 'pytmc' := 'pv: DREAM:ROUGH1:GPI:01'}
	DREAM_ROUGH1_GPI_01 : FB_9XX;
	
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[K4S8_DRL_04_EP1_EP4374-0002]^AI Inputs Channel 1^Value'}
	{attribute 'pytmc' := 'pv: DREAM:ROUGH1:GPI:02'}
	DREAM_ROUGH1_GPI_02 : FB_9XX;

	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[WALL_E_PPL_01_EP1_EP4374-0002]^AI Inputs Channel 2^Value'}
	{attribute 'pytmc' := 'pv: DREAM:ROUGH2:GPI:01'}
	DREAM_ROUGH2_GPI_01 : FB_9XX;
	
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[K4S8_DRL_04_EP1_EP4374-0002]^AI Inputs Channel 2^Value'}
	{attribute 'pytmc' := 'pv: DREAM:ROUGH2:GPI:02'}
	DREAM_ROUGH2_GPI_02 : FB_9XX;
	
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[K4S8_DRL_04_EP2_EP4374-0002]^AI Inputs Channel 1^Value'}
	{attribute 'pytmc' := 'pv: DREAM:ROUGH2:GPI:03'}
	DREAM_ROUGH2_GPI_03 : FB_9XX;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>